# dhcpy6d

./: pyproject.toml  setup.py
dhcpy6d/: config.py  log.py  main.py
dhcpy6d/storage/: sqlite.py
var/lib/: volatile.sqlite
