# For possible options see https://peps.python.org/pep-0621/
 
[project]
name = "dhcpy6d"
version = "1.2.2"
description="DHCPv6 server daemon"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}  # TODO:  Remove Nagstamon references.
keywords = ["dhcp", "ipv6"]
authors = [
    {name = "Henri Wahl", email = "henri@dhcpy6d.de"}
]
classifiers = [
    "Intended Audience :: System Administrators",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: System :: Networking"
]

# End of project metadata

dependencies = [
    "distro",
    "dnspython",
]

[project.urls]
download = "https://dhcpy6d.de/download"

[project.scripts]
dhcpy6d = "dhcpy6d.main:run"

[build-system]
requires = [
    "setuptools >= 61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "dhcpy6d",
    "dhcpy6d.client",
    "dhcpy6d.options",
    "dhcpy6d.storage",
]

